# wifi-print-readable-passwd

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .yamllint.yml  README.md  config.py  config.sample.toml  config.schema  i18n.py  layout.py  main.py  make.py  myhack.py  paths.py  pyproject.toml
example/: config.toml
fonts/material-design-icons-4.0.0/: README.md
locale/en/LC_MESSAGES/: locale.po
locale/es/LC_MESSAGES/: locale.po
locale/fr/LC_MESSAGES/: locale.po
